# fullerene-bin

./: .gitignore  Cargo.toml  Makefile  fullerene.go
src/: main.rs  prom.rs  render.rs
