[package]
name = "fullerene"
version = "0.1.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.2"
itertools = "0.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
hsluv = "0.1"
